# pbt-demo

./: .gitignore  README.md  poetry.toml  property-based testing.odp  pylintrc  pyproject.toml
model_pst/: circular_buffer.py
model_pst/tests/: test_circular_buffer.py
rgb/step1/: rgb.py
rgb/step1/tests/: tests.py
rgb/step10/tests/: tests.py
rgb/step2/: rgb.py
rgb/step2/tests/: tests.py
rgb/step3/: rgb.py
rgb/step3/tests/: tests.py
rgb/step4/tests/: tests.py
rgb/step5/: rgb.py
rgb/step5/tests/: tests.py
rgb/step6/: rgb.py
rgb/step6/tests/: tests.py
rgb/step7/: rgb.py
rgb/step7/tests/: tests.py
rgb/step8/: rgb.py
rgb/step8/tests/: tests.py
rgb/step9/: rgb.py
rgb/step9/tests/: tests.py
