[tool.poetry]
name = "pbt-demo"
version = "0.1.0"
description = ""
authors = ["Igor Brejc <igor.brejc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
hypothesis = "^6.9.1"
pytest = "^6.2.3"
pylint = "^2.7.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
