[tool.poetry]
name = "pbt-demo"
version = "0.1.0"
description = ""
authors = ["Igor Brejc <igor.brejc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
pylint = "^2.7.4"
mypy = "^0.812"
hypothesis = "^6.9.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
